# forwarder-example

./: .gitignore  Cargo.toml  README.md  deno.json
.data/: deployment.json
contracts/forwarder/: Cargo.toml
contracts/forwarder/src/: contract.rs  lib.rs  message.rs
contracts/message_transmitter/: Cargo.toml
contracts/message_transmitter/src/: contract.rs  lib.rs  message.rs
typescript/.data/: deployment.json
typescript/src/: forward-c.ts  forward-g.ts  forward-m.ts  setup.ts
typescript/src/config/: types.ts
typescript/src/utils/: build-message.ts
