[package]
name = "forwarder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat-address"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "hazmat-address"] }
